--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -2001,6 +2001,21 @@ boss__fluent__bit__centralized__deployment_spec_template_spec_securityContext: "
 #        runAsUser: 65534
 
 
+##########################################################################################################
+# .##....##.########..########.
+# .###...##.##.....##.##.....##
+# .####..##.##.....##.##.....##
+# .##.##.##.########..##.....##
+# .##..####.##........##.....##
+# .##...###.##........##.....##
+# .##....##.##........########.
+##########################################################################################################
+
+boss__npd__subdomain: npd
+boss__npd__manifest_path: "{{manifest_dir_path}}/npd"
+boss__npd__namespace_name: kube-system
+
+
 # ---
 # local_release_dir: /tmp/releases
 
