--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -1824,7 +1824,7 @@ boss__fluent__bit__centralized__fluent_bit_version: 1.0.5
 boss__fluent__bit__centralized__fluent_bit_image_repo: "fluent/fluent-bit"
 boss__fluent__bit__centralized__fluent_bit_image_tag: "{{ boss__fluent__bit__centralized__fluent_bit_version }}"
 boss__fluent__bit__centralized__shared_name: fluent-bit-centralized
-boss__fluent__bit__centralized__configmap_suffix: "-0-1-0"
+boss__fluent__bit__centralized__configmap_suffix: "-0-2-0"
 boss__fluent__bit__centralized__create_namespace: "absent"
 boss__fluent__bit__centralized__create_ingress: "present"
 boss__fluent__bit__centralized__loglevel: "debug"
@@ -1838,7 +1838,7 @@ boss__fluent__bit__centralized__deployment_spec_template_containers_resources: |
     memory: "10Mi"
 
 boss__fluent__bit__centralized__serviceAccountName: "{{boss__fluent__bit__centralized__shared_name}}"
-boss__fluent__bit__centralized__deployment_spec_replicas: 2
+boss__fluent__bit__centralized__deployment_spec_replicas: 3
 
 # boss__fluent__bit__centralized__deployment_spec_template_containers_command: []
 
@@ -1868,6 +1868,7 @@ boss__fluent__bit__centralized__deployment_spec_template_containers_ports: |-
     name: http-metrics
   - containerPort: 5140
     name: syslog
+    protocol: TCP
 
 boss__fluent__bit__centralized__deployment_spec_template_containers_env: |-
   # - name: FLUENT_ELASTICSEARCH_HOST
