wip: fluent-bit-centralized - borglab

--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -1824,7 +1824,7 @@ boss__fluent__bit__centralized__fluent_bit_version: 1.0.5
 boss__fluent__bit__centralized__fluent_bit_image_repo: "fluent/fluent-bit"
 boss__fluent__bit__centralized__fluent_bit_image_tag: "{{ boss__fluent__bit__centralized__fluent_bit_version }}"
 boss__fluent__bit__centralized__shared_name: fluent-bit-centralized
-boss__fluent__bit__centralized__configmap_suffix: "-0-2-0"
+boss__fluent__bit__centralized__configmap_suffix: "-0-3-0"
 boss__fluent__bit__centralized__create_namespace: "absent"
 boss__fluent__bit__centralized__create_ingress: "present"
 boss__fluent__bit__centralized__loglevel: "debug"
@@ -1944,7 +1944,7 @@ boss__fluent__bit__centralized__service_spec_ports: |-
   #   name: http-metrics
   - port: 5140
     targetPort: 5140
-    protocol: TCP
+    protocol: UDP
     name: syslog
 
 boss__fluent__bit__centralized__service_spec_selector: |-
