--- a/vars/clear/kubernetes-cluster_manifest.yml
+++ b/vars/clear/kubernetes-cluster_manifest.yml
@@ -1842,7 +1842,7 @@ boss__fluent__bit__centralized__fluent_bit_version: 1.0.5
 boss__fluent__bit__centralized__fluent_bit_image_repo: "fluent/fluent-bit"
 boss__fluent__bit__centralized__fluent_bit_image_tag: "{{ boss__fluent__bit__centralized__fluent_bit_version }}"
 boss__fluent__bit__centralized__shared_name: fluent-bit-centralized
-boss__fluent__bit__centralized__configmap_suffix: "-0-2-0"
+boss__fluent__bit__centralized__configmap_suffix: "-0-3-0"
 boss__fluent__bit__centralized__create_namespace: "absent"
 boss__fluent__bit__centralized__create_ingress: "present"
 boss__fluent__bit__centralized__loglevel: "debug"
@@ -1886,7 +1886,7 @@ boss__fluent__bit__centralized__deployment_spec_template_containers_ports: |-
     name: http-metrics
   - containerPort: 5140
     name: syslog
-    protocol: TCP
+    protocol: UDP
 
 boss__fluent__bit__centralized__deployment_spec_template_containers_env: |-
   # - name: FLUENT_ELASTICSEARCH_HOST
@@ -1962,7 +1962,7 @@ boss__fluent__bit__centralized__service_spec_ports: |-
   #   name: http-metrics
   - port: 5140
     targetPort: 5140
-    protocol: TCP
+    protocol: UDP
     name: syslog
 
 boss__fluent__bit__centralized__service_spec_selector: |-
