Feature: remote-fluentd (#8)
* wip: cleanup code

* wip: goss

* wip: more goss

* wip: more goss

* wip: sono

* wip: kernel

* wip: stress tests

* wip: efk borglab

* wip: sonobuoy borglab

* wip: sonobuoy borglab

* wip: kubetest

* wip: kubetest

* wip: manifest-lint

* wip: manifest-lint

* wip: manifest-lint

* wip: sonobuoy borglab

* wip: sonobuoy borglab

* wip: manifest-lint

* wip: manifest-lint

* wip: manifest-lint

* wip: yq changes

* wip: manifest-lint

* WIP: tar.gz sonobuoy

* wip: sonobuoy borglab

* wip: fluent-bit-centralized

* wip: ci

* wip: ci

* WIP: render

* wip: fluent-bit-centralized

* wip: fluent-bit-centralized

* wip: fluent-bit-centralized

* wip: fluent-bit-centralized

* wip: fluent-bit-centralized

* wip: fluent-bit-centralized

* wip: ci

* wip: ci

* wip: ci

* wip: ci

* wip: ci

* wip: ci

* wip: ci

* wip: ci

* wip: syslog is finally going though

* wip: change logs

* wip: change from smoke to deploy

* wip: npd

* wip: fluent-bit-centralized

* wip: cleanup

* wip: cleanup

* wip: cleanup

* wip: fluent-bit-centralized - borglab

* wip:

* wip: fluent-bit-centralized - borglab

* wip: fluent-bit-centralized - borglab

* wip: UDP

* woot: fluent-bit-centralized - borglab

* wip: ok we got something for right now

--- a/.gitignore
+++ b/.gitignore
@@ -187,6 +187,7 @@ playbooks/.ansible-logs/
 
 !.vscode/launch.json
 badass.txt
+.vscode
 
 
 # secrets
@@ -205,3 +206,10 @@ scaps
 
 # Jsonnet dependencies
 vendor/
+
+
+# sonobuoy
+*_sonobuoy_*.tar.gz
+results/
+tars/
+*.yaml.part*
