--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -2041,7 +2041,7 @@ boss__elasticsearch__exporter__deployment_spec_strategy: |-
 
 boss__elasticsearch__exporter__deployment_spec_template_containers_command: |-
   - /bin/elasticsearch_exporter
-  - -es.uri=http://elasticsearch:9200
+  - -es.uri=http://elasticsearch-logging:9200
   - -es.all=true
 
 boss__elasticsearch__exporter__deployment_labels: |-
