--- a/containers/fluentd-elasticsearch/Gemfile
+++ b/containers/fluentd-elasticsearch/Gemfile
@@ -42,6 +42,7 @@ gem "fluent-plugin-snmp"
 gem "fluent-plugin-td"
 gem "fluent-plugin-td-monitoring"
 gem "fluent-plugin-webhdfs"
+gem "fluent-plugin-grok-parser"
 gem "fluentd-ui", "1.0.0.alpha.2"
 gem "sigdump"
 gem "snmp"
