--- a/vars/clear/borg_manifest.yml
+++ b/vars/clear/borg_manifest.yml
@@ -2169,6 +2169,267 @@ boss__elasticsearch__exporter__deployment_spec_template_spec_containers_readines
   initialDelaySeconds: 10
   timeoutSeconds: 10
 
+##########################################################################################################
+# .########.##.......##.....##.########.##....##.########.########...........######..########.##....##.########.########.....###....##.......####.########.########.########.
+# .##.......##.......##.....##.##.......###...##....##....##.....##.........##....##.##.......###...##....##....##.....##...##.##...##........##.......##..##.......##.....##
+# .##.......##.......##.....##.##.......####..##....##....##.....##.........##.......##.......####..##....##....##.....##..##...##..##........##......##...##.......##.....##
+# .######...##.......##.....##.######...##.##.##....##....##.....##.#######.##.......######...##.##.##....##....########..##.....##.##........##.....##....######...##.....##
+# .##.......##.......##.....##.##.......##..####....##....##.....##.........##.......##.......##..####....##....##...##...#########.##........##....##.....##.......##.....##
+# .##.......##.......##.....##.##.......##...###....##....##.....##.........##....##.##.......##...###....##....##....##..##.....##.##........##...##......##.......##.....##
+# .##.......########..#######..########.##....##....##....########...........######..########.##....##....##....##.....##.##.....##.########.####.########.########.########.
+##########################################################################################################
+boss__fluentd__centralized__subdomain: fluentd-centralized
+boss__fluentd__centralized__manifest_path: "{{manifest_dir_path}}/fluentd-centralized"
+boss__fluentd__centralized__namespace_name: kube-system
+# boss__fluentd__centralized__fluentd_version: v2.0.4-ui
+# boss__fluentd__centralized__fluentd_image_repo: "alogoc/fluentd-elasticsearch"
+boss__fluentd__centralized__fluentd_version: v2.5.0
+boss__fluentd__centralized__fluentd_image_repo: "bossjones/fluentd-elasticsearch"
+boss__fluentd__centralized__fluentd_image_tag: "{{ boss__fluentd__centralized__fluentd_version }}"
+boss__fluentd__centralized__shared_name: fluentd-centralized
+boss__fluentd__centralized__configmap_suffix: "-0-3-0"
+boss__fluentd__centralized__create_namespace: "absent"
+boss__fluentd__centralized__create_ingress: "present"
+boss__fluentd__centralized__loglevel: "debug"
+
+boss__fluentd__centralized__deployment_spec_template_containers_resources: |
+  limits:
+    cpu: ".2"
+    memory: "100Mi"
+  requests:
+    cpu: "0.05"
+    memory: "10Mi"
+
+boss__fluentd__centralized__serviceAccountName: "{{boss__fluentd__centralized__shared_name}}"
+boss__fluentd__centralized__deployment_spec_replicas: 3
+
+# boss__fluentd__centralized__deployment_spec_template_containers_command: []
+
+boss__fluentd__centralized__cluster_role_rules: |-
+  - apiGroups:
+    - ""
+    resources:
+    - "namespaces"
+    - "pods"
+    - "secrets"
+    - "pods/log"
+    - "deployments"
+    - "batch"
+    - "extensions"
+    - "crontabs"
+    verbs:
+    - "get"
+    - "watch"
+    - "list"
+    - "update"
+    - "post"
+
+boss__fluentd__centralized__deployment_labels: |-
+  k8s-app: {{boss__fluentd__centralized__shared_name}}
+  version: v2.5.0
+  kubernetes.io/cluster-service: "true"
+
+boss__fluentd__centralized__deployment_spec_matchLabels: "disabled"
+
+# boss__fluentd__centralized__deployment_spec_matchLabels: |-
+#   k8s-app: {{boss__fluentd__centralized__shared_name}}
+#   version: v2.5.0
+
+boss__fluentd__centralized__deployment_spec_template_metadata_labels: |-
+  k8s-app: {{boss__fluentd__centralized__shared_name}}
+  version: v2.5.0
+  kubernetes.io/cluster-service: "true"
+
+boss__fluentd__centralized__deployment_spec_template_metadata_annotations: |
+  prometheus.io/scrape: "true"
+  prometheus.io/port: "24231"
+
+boss__fluentd__centralized__deployment_spec_template_containers_ports: |-
+  # - containerPort: 2020
+  #   name: http-metrics
+  # - containerPort: 5140
+  #   name: syslog
+  #   protocol: UDP
+  - containerPort: 24224
+    name: in-forward
+    protocol: TCP
+  - containerPort: 9880
+    name: http
+    protocol: TCP
+  - containerPort: 161
+    name: snmp
+    protocol: UDP
+  - containerPort: 5160
+    name: in-udp
+    protocol: UDP
+  - containerPort: 5170
+    name: in-tcp
+    protocol: TCP
+  - containerPort: 5140
+    name: in-syslog
+    protocol: TCP
+  - containerPort: 9292
+    name: fluentd-ui
+    protocol: TCP
+  - containerPort: 24231
+    name: promths-mtr
+    protocol: TCP
+  - containerPort: 24220
+    name: monitor-agnt
+    protocol: TCP
+
+boss__fluentd__centralized__deployment_spec_template_containers_env: |-
+  # - name: FLUENT_ELASTICSEARCH_HOST
+  #   value: "elasticsearch"
+  # - name: FLUENT_ELASTICSEARCH_PORT
+  #   value: "9200"
+
+    # Memory limit that the file tail plugin can use when appending data to the Engine
+  - name: TAIL_BUF_LIMIT
+    value: "5MB"
+
+  - name: NODE_IP
+    valueFrom:
+      fieldRef:
+        fieldPath: status.hostIP
+  - name: POD_UID
+    valueFrom:
+      fieldRef:
+        fieldPath: metadata.uid
+  - name: POD_NAME
+    valueFrom:
+      fieldRef:
+        fieldPath: metadata.name
+  - name: POD_IP
+    valueFrom:
+      fieldRef:
+        fieldPath: status.podIP
+  - name: POD_NAMESPACE
+    valueFrom:
+      fieldRef:
+        fieldPath: metadata.namespace
+  - name: NODE_IP
+    valueFrom:
+      fieldRef:
+        fieldPath: status.hostIP
+  - name: NODE_NAME
+    valueFrom:
+      fieldRef:
+        fieldPath: spec.nodeName
+
+boss__fluentd__centralized__deployment_spec_template_spec_volumeMounts: |
+  # The volume where logs will be delivered by the Docker logging driver
+  - name: logging-volume
+    mountPath: /logging-volume
+  # The volume where Fluent Bit stores persistent data (position databases for tracking ingested files)
+  - name: fluent-data
+    mountPath: /var/fluent-bit
+  # The Fluent Bit config file to use
+  - name: fluent-bit-config
+    mountPath: /fluent-bit/etc
+
+boss__fluentd__centralized__deployment_spec_template_spec_volumes: |
+  - name: logging-volume
+    emptyDir: {}
+  - name: fluent-bit-config
+    configMap:
+      name: {{boss__fluentd__centralized__shared_name}}-config{{boss__fluentd__centralized__configmap_suffix}}
+  - name: fluent-data
+    emptyDir: {}
+
+boss__fluentd__centralized__service_labels: |-
+  k8s-app: {{boss__fluentd__centralized__shared_name}}
+  version: v2.5.0
+  kubernetes.io/cluster-service: "true"
+
+boss__fluentd__centralized__service_annotations: "disabled"
+
+boss__fluentd__centralized__service_spec_type: ClusterIP
+
+boss__fluentd__centralized__service_spec_ports: |-
+  # - port: 2020
+  #   targetPort: 2020
+  #   protocol: TCP
+  #   name: http-metrics
+  # - port: 5140
+  #   targetPort: 5140
+  #   protocol: UDP
+  #   name: syslog
+  - name: in-forward
+    port: 24224
+    protocol: TCP
+    targetPort: in-forward
+  - name: http
+    port: 9880
+    protocol: TCP
+    targetPort: http
+  - name: snmp
+    port: 161
+    protocol: UDP
+    targetPort: snmp
+  - name: in-udp
+    port: 5160
+    protocol: UDP
+    targetPort: in-udp
+  - name: in-tcp
+    port: 5170
+    protocol: TCP
+    targetPort: in-tcp
+  - name: in-syslog
+    port: 5140
+    protocol: TCP
+    targetPort: in-syslog
+  - name: fluentd-ui
+    port: 9292
+    protocol: TCP
+    targetPort: fluentd-ui
+  - name: promths-mtr
+    port: 24231
+    protocol: TCP
+    targetPort: promths-mtr
+  - name: monitor-agnt
+    port: 24220
+    protocol: TCP
+    targetPort: monitor-agnt
+
+boss__fluentd__centralized__service_spec_selector: |-
+  k8s-app: {{boss__fluentd__centralized__shared_name}}
+
+boss__fluentd__centralized__ingress_spec_rules_http_paths: |
+  - path: /
+    backend:
+      serviceName: {{boss__fluentd__centralized__shared_name}}
+      servicePort: 5160
+
+boss__fluentd__centralized__ingress_labels: |-
+  k8s-app: {{boss__fluentd__centralized__shared_name}}
+  version: v2.5.0
+  kubernetes.io/cluster-service: "true"
+
+boss__fluentd__centralized__ingress_annotations: |-
+  nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+  traefik.frontend.rule.type: PathPrefix
+
+boss__fluentd__centralized__deployment_spec_template_spec_hostNetwork: True
+boss__fluentd__centralized__deployment_spec_template_spec_hostPID: True
+
+
+boss__fluentd__centralized__deployment_spec_template_spec_nodeSelector: |-
+  beta.kubernetes.io/os: linux
+
+boss__fluentd__centralized__deployment_spec_template_spec_securityContext: "disabled"
+
+#      hostNetwork: true
+#      hostPID: true
+#      nodeSelector:
+#        beta.kubernetes.io/os: linux
+#      securityContext:
+#        runAsNonRoot: true
+#        runAsUser: 65534
+
+# [20:34:19,104] <inform-707> INFO inform - from [MAC ADDRESS](UniFi Security Gateway 3P, UGW3, 4.4.36.5146617): state=CONNECTED, last_inform=3, ext/stun_ip=192.168.1.1, dev_ip=192.168.0.3, up=4955230
+
+
 vagrant_playbook_enable_role_tools: "enabled"
 vagrant_playbook_enable_role_bootstrap: "enabled"
 vagrant_playbook_enable_role_nfs_master: "enabled"
