Feature: rsyslog container

--- a/containers/rsyslog/Makefile
+++ b/containers/rsyslog/Makefile
@@ -21,7 +21,7 @@ container_name := rsyslog
 GIT_BRANCH  = $(shell git rev-parse --abbrev-ref HEAD)
 GIT_SHA     = $(shell git rev-parse HEAD)
 BUILD_DATE  = $(shell date -u +"%Y-%m-%dT%H:%M:%SZ")
-VERSION     ?= $(shell grep "jumanjiman/rsyslog" Dockerfile | head -1 | cut -d":" -f2)
+VERSION     ?= $(shell grep "alpine:3.7" Dockerfile | head -1 | cut -d":" -f2)
 
 TAG ?= $(VERSION)
 ifeq ($(TAG),@branch)
