--- a/containers/rsyslog/rsyslog.conf
+++ b/containers/rsyslog/rsyslog.conf
@@ -22,10 +22,9 @@ module(load="omelasticsearch")
 module(load="mmjsonparse")
 module(load="mmutf8fix")
 
-
-input(type="imptcp" port="514")
-input(type="imudp" port="514")
-input(type="imrelp" port="1601")
+input(type="imptcp" port=`echo $_IMTCP_PORT`)
+input(type="imudp" port=`echo $_IMUDP_PORT`)
+input(type="imrelp" port=`echo $_IMRELP_PORT`)
 
 # SOURCE: https://itnext.io/metrics-from-kubernetes-logs-82cb1dcb3551
 # ***************************************************************************************
@@ -56,6 +55,9 @@ action(name="main_utf8fix" type="mmutf8fix" replacementChar="?")
 # include(text=`echo $CNF_CALL_LOG_TO_LOGFILES`)
 # include(text=`echo $CNF_CALL_LOG_TO_LOGSENE`)
 include(text=`echo $CNF_CALL_LOG_TO_STDOUT`)
+include(text=`echo $_IMTCP_PORT`)
+include(text=`echo $_IMUDP_PORT`)
+include(text=`echo $_IMRELP_PORT`)
 
 # SOURCE: https://itnext.io/metrics-from-kubernetes-logs-82cb1dcb3551
 # ***************************************************************************************
